@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1539] Fixed a few bugs with the manager log page
 - [#MODX-1530] Fixed permission reference in resource create/data
 - [#MODX-1532] Fixed bug in permissions reference when trying to remove element from property set
 - Fixed bug with login page and new controllers location
